--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Navegadores web</h1>
+    <hr>
+    <p class="blue">Un navegador web (en inglés, web browser)es un software, aplicación o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos. </p>
+    <hr>
+    <p class="green">La funcionalidad básica de un navegador web es permitir la visualizatión de documentos</p>
+
 </body>
 </html>
