--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica 3.3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <p class="blue">Un navegador web (en inglés, web browser)es un software, aplicación o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos. </p>
     <hr>
     <p class="green">La funcionalidad básica de un navegador web es permitir la visualizatión de documentos de texto, posiblemente con recursos multimedia incrustados</p>
-    <h1>Ejemplos de navegadores web</h1>
+    <p><b>Ejemplos de navegadores web</b></p>
     <p class="red">Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS.</p>
     <p class="red">Mozilla Firefox es un navegador web libre y de código abierto desarrollado para distintas plataformas, está coordinado por la Corporación Mozilla y la Fundación Mozilla.</p>
     <p class="red">Google Chrome de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto</p>
